# ScreenRecorder

./: .gitignore  AboutWidget.cpp  AboutWidget.h  AboutWidget.ui  AlsaIn.cpp  AlsaIn.h  AudioFrameProducer.cpp  AudioFrameProducer.h  AudioInInterface.cpp  AudioInInterface.h  CMakeLists.txt  CameraWidget.cpp  CameraWidget.h  CameraWidget.ui  CrossCursorWidget.cpp  CrossCursorWidget.h  CrossCursorWidget.ui  FFMpegRunner.cpp  FFMpegRunner.h  FFMpegRunnerDialog.cpp  FFMpegRunnerDialog.h  FFMpegRunnerDialog.ui  InterfaceFactory.cpp  InterfaceFactory.h  LicenseType.h  LinuxFileWriter.cpp  LinuxFileWriter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NullAudioIn.cpp  NullAudioIn.h  README.md  Settings.cpp  Settings.h  Settings.ui  SocketWriter.cpp  TabDialog.cpp  TabDialog.h  TabDialog.ui  (+22 more)
Gif/: Bucket.cpp  Bucket.h  ColorMap.cpp  ColorMap.h  GifMaker.cpp  GifMaker.h
Playback/: PreviewWidget.cpp  PreviewWidget.h  PreviewWidget.ui  ScreenStreamer.cpp  ScreenStreamer.h  SocketReader.cpp  SocketReader.h  ffplay3.c  ffplay3.h
X264Encoder/: CMakeLists.txt  X264Encoder.cpp  X264Encoder.h  YuvWriter.cpp  YuvWriter.h  main.cpp
install-scripts/: ScreenRecorderSetup.iss  screen-recorder.deb.mkr
install-scripts/screenrecorder/DEBIAN/: control
resources/: blue-footed-booby-with-camera-icon.xcf  blue-footed-booby-with-camera.xcf  camera.xcf  enterkey.xcf  license.txt  screen-recorder.xcf  screenrecorder.rc  watermark.xcf
resources/web/: index.txt
